Change dashboard size to fit full screen, remove gap to fix layout issue

--- a/style.css
+++ b/style.css
@@ -150,16 +150,15 @@ html {
   display: grid;
   grid-template-columns: auto 2fr;
   grid-template-rows: 1fr 2fr;
-  width: 105rem;
-  height: 58rem;
+  height: 100%;
+  width: 100%;
   flex-shrink: 0;
   border: 0.5px solid rgba(255, 255, 255, 0.58);
-  border-radius: 20px;
   background: rgba(255, 255, 255, 0.17);
   backdrop-filter: blur(4.400000095367432px);
   margin: 0 auto;
-  gap: 1em;
   overflow: hidden;
+  row-gap: 1em;
 }
 
 .side-bar {
@@ -172,7 +171,6 @@ html {
   width: 26rem;
   height: 100%;
   flex-grow: 1;
-  border-radius: 1.25rem 0rem 0rem 1.25rem;
   background: #121415;
   padding-bottom: 2em;
 }
@@ -258,6 +256,7 @@ a {
   display: grid;
   grid-template-columns: auto 2fr auto;
   grid-auto-flow: column;
+  margin-left: 1em;
   padding: 1em 1em 0 0;
 }
 
@@ -335,6 +334,7 @@ a {
   grid-template-columns: 2fr 1fr auto;
   grid-template-rows: auto 2fr auto;
   gap: 1em;
+  margin-left: 1em;
 }
 
 .top-assets-container {
